Restore focus after switching mode. Fixed z-index issue with context menu.

--- a/jsoneditor.css
+++ b/jsoneditor.css
@@ -224,6 +224,7 @@ div.jsoneditor {
 
 .jsoneditor-contextmenu {
     position: absolute;
+    z-index: 999;
 }
 
 .jsoneditor-contextmenu ul {
@@ -236,7 +237,6 @@ div.jsoneditor {
     border: 1px solid #d3d3d3;
     box-shadow: 2px 2px 12px rgba(128, 128, 128, 0.3);
 
-    z-index: 1;
     list-style: none;
     margin: 0;
     padding: 0;
